log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: shared-claim
      containers:
        - name: log-writer
          image: log-output-writer:1.11
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
        - name: log-reader
          image: log-output-reader:1.11
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
